add contruction message

--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ title: "Home"
 ---
 
 
-Currently under construction due to website migration, sorry!
+<p>Currently under construction due to website migration, sorry!</p>
