--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 ---
-layout: home
-title: "Home"
+layout: default
 ---
 
-
-<p>Currently under construction due to website migration, sorry!</p>
+<article>Apologies, site currently under construction due to migration.</article>
