changed to 4th year

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: Home
 ---
 
 <article>
-    <h2>About me - under construction</h2>
+    <h2>About me</h2>
     <img src="assets/img/me.png" alt="Me and my parents" style="width: 20vw; float: right; margin: 1rem 2rem">
-    <p>Welcome, my name is Addison Kimball and I'm a 3<sup>rd</sup> year undergraduate student studying Computer Science at Southern Methodist University. 
+    <p>Welcome, my name is Addison Kimball and I'm a 4<sup>th</sup> year undergraduate student studying Computer Science at Southern Methodist University. 
         Originally from Woodstock, Illinois, I attended <a href="https://www.sps.edu">St. Paul's School</a> in Concord, New Hampshire.
         I am an only child, and I spend the Summer with my parents Beau (Addison Sr.) and Nancy Kimball.
         I've loved computers for as long as I can remember and music even longer than that! In addition to my hobbies that keep me joined at the hip with my computer, I love to run, hike, and sail.
