changed pic and bio and updated theme link

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@ title: Home
 
 <article>
     <h2>About me</h2>
-    <img src="assets/img/me.png" alt="Me and my parents" style="width: 20vw; float: right; margin: 1rem 2rem">
-    <p>Welcome, my name is Addison Kimball and I'm a 4<sup>th</sup> year undergraduate student studying Computer Science at Southern Methodist University. 
-        Originally from Woodstock, Illinois, I attended <a href="https://www.sps.edu">St. Paul's School</a> in Concord, New Hampshire.
-        I am an only child, and I spend the Summer with my parents Beau (Addison Sr.) and Nancy Kimball.
-        I've loved computers for as long as I can remember and music even longer than that! In addition to my hobbies that keep me joined at the hip with my computer, I love to run, hike, and sail.
-        Since I've been at SMU I've enjoyed spending time with friends, greek life, slacklining (the balance based walking sport) and working on dev projects of my own. I am very passionate about interconectivity 
-        and connected embedded devices.</p>
+    <img src="assets/img/family2.jpg" alt="Me and my parents" style="width: 15vw; float: right; margin: 1rem 2rem">
+    <p>My name is Addison Kimball, I am an independent software developer, fourth year Computer Science student at Southern Methodist University, Teaching Assistant and all-around curious human. 
+        I have had a serious passion for computers my entire life, and the self-teaching that came as a result has instilled in me the utmost respect for self-education, freedom of knowledge, and open-source software, one of my serious interests. 
+        While technology is what I am passionate about, it is the intersection of communication, leadership and technology that gets me the most excited. 
+        Beyond my love of all things technology I am an avid long-distance runner and lifelong music-lover. </p>
 </article>
